--- a/template.yaml
+++ b/template.yaml
@@ -338,7 +338,7 @@ Resources:
       PolicyType: TargetTrackingScaling
       TargetTrackingConfiguration:
         PredefinedMetricSpecification:
-          PredefinedMetricType: ASGCPUUtilization
+          PredefinedMetricType: ASGAverageCPUUtilization
         TargetValue: 30
 
 Outputs:
