--- a/template.yaml
+++ b/template.yaml
@@ -338,26 +338,18 @@ Resources:
                 }
               </style>
             <body>
-              <div class='container'>
-                <h1>Auto-Scaling Demonstration</h1>
-                <p>Hello from $META_IP / $META_ID</p>
-                <p>This page is served from an EC2 instance within an auto-scaling group. Click the button to trigger a CPU stress test.</p>
-                <button id="stressBtn">Start CPU Stress</button>
-                <button id="stopBtn">Stop CPU Stress</button
-                <div id="result"></div>
-              </div>
-              
+              <h1>Hello from $META_IP / $META_ID</h1>
+              <button id="stressBtn">Start CPU Stress</button>
+              <button id="stopBtn">Stop CPU Stress</button>
+              <div id="result"></div>
               <script>
                 document.getElementById('stressBtn').addEventListener('click', function() {
-                document.getElementById('result').innerText = "Starting CPU stress...";
-
                   fetch('/cgi-bin/stress.sh')
                     .then(r => r.text())
                     .then(t => { document.getElementById('result').innerHTML = '<pre>' + t + '</pre>'; })
                     .catch(e => { document.getElementById('result').innerText = 'Error: ' + e; });
                 });
                 document.getElementById('stopBtn').addEventListener('click', function() {
-                document.getElementById('result').innerText = "Stopping CPU stress...";
                   fetch('/cgi-bin/stop-stress.sh')
                     .then(r => r.text())
                     .then(t => { document.getElementById('result').innerHTML = '<pre>' + t + '</pre>'; })
